fix mobile translate icon and campaign title overlapping

--- a/web/themes/custom/sfgovpl/src/sass/node/_node-campaign.scss
+++ b/web/themes/custom/sfgovpl/src/sass/node/_node-campaign.scss
@@ -27,6 +27,13 @@
     }
     .head-right--container {
       width: auto;
+      @include media-max($medium-screen) {
+        .gtranslate_container {
+          position: absolute;
+          right: 20px;
+          top: 35px;
+        }
+      }
     }
   }
 
